--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pandas = "^2.2.3"
 asyncio = "^3.4.3"
 pyarrow = "^18.1.0"
 adbc-driver-manager = "^1.3.0"
+httpx = "^0.28.0"
+aioredis = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
@@ -26,6 +28,8 @@ black = "^24.10.0"
 pytest = "^8.3.3"
 pytest-cov = "^6.0.0"
 pandas = "^2.2.3"
+pytest-asyncio = "^0.24.0"
+httpx = "^0.28.0"
 
 [build-system]
 requires = ["poetry-core"]
